# Drova---Forsaken-Kin-Auto-Translate-Tool

./: .gitignore  README.md  pyproject.toml  replace_fonts.py  translate_loc.py
doc/: README_zh_CN.md
